# busability-lima-agile-2025

./: .pre-commit-config.yaml  README.md  config.yml  create_graphs.py  get_busability.py  get_poi_ratio.py  get_poi_ratio_for_reachable_nodes.py  get_reachable_nodes_isochrones.py  pyproject.toml  utils.py
Docker/: docker-compose.yml
busability/: create_graphs.py  get_poi_ratio.py  get_reachable_nodes_isochrones.py  utils.py
busability/data_preprocessing/: get_lanes_info.ipynb  get_route_geometry_between_stops.ipynb  isochrones.ipynb  route_sequence.R
busability/network_preprocessing/: network_creator.py
busability/network_processing/: network_analyzer.py
config/: config.yml  config_create_graphs.yml  config_get_poi_ratio.yml  config_get_reachable_nodes_isochrones.yml
config/london/: config_create_graphs.yml  config_get_poi_ratio.yml  config_get_reachable_nodes_isochrones.yml
make_gtfs/: preprocess_files.Rmd
make_gtfs/R/: preprocess_files.Rmd
make_gtfs/make_gtfs_data/: make_gtfs.ipynb
network_preprocessing/: network_creator.py
network_preprocessing/ohsome_log/: ohsome_2024-06-28T161151.json  ohsome_2024-06-28T161151_bpolys.geojson  ohsome_2024-06-28T161151_raw.txt  ohsome_2024-06-28T161345.json  ohsome_2024-06-28T161345_curl.sh  ohsome_2024-06-28T161345_raw.txt  ohsome_2024-06-28T163938.json  (+7 more)
network_processing/: get_hexagon_values.py  get_max_area_in_polygon.py  network_analyzer.py
test/: config.yml  conftest.py  test_get_max_area_in_polygon.py  test_multiprocessing.py  test_network_analyzer.py  test_network_creator.py  test_utils.py
(+35 files in other folders)
