[tool.poetry]
name = "busability"
version = "0.1.0"
description = ""
authors = ["Levi Szamek <levi@szamek.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
networkx = "^3.4.2"
pandas = "^2.2.3"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.9.1"
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
